--- a/index.html
+++ b/index.html
@@ -354,7 +354,19 @@
        </section>
 
        <footer class="footer">
-        Footer
+        <ul class="nav">
+          <li class="nav__item"><a href="#" class="nav__link">Find your dream home</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Download the home planner</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Come work with us</a></li>
+
+        </ul>
+
+        <p class="copyright">
+          &copy; Copyright 2022 by Rupali.
+        </p>
        </footer>
     </body>
 </html>
