--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="img/logo.png" alt="Header Logo" class="header__logo">
             <h3 class="heading-3">Your own home:</h3>
             <h3 class="heading-1">The ultimate personal freedom</h3>
-            <button class="btn">View our properties</button>
+            <button class="btn header__btn">View our properties</button>
             <div class="header__seenon-text">Seen on</div>
             <div class="header__seenon-logos">
                <img src="img/logo-bbc.png" alt="Seen on logo 1">
