Completed without media querry

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         </ul>
 
         <p class="copyright">
-          &copy; Copyright 2022 by Rupali.
+          &copy; Copyright 2022 by Rupali. It is the sample test project.
         </p>
        </footer>
     </body>
